feature article topper

--- a/_imports/article-topper-feature-black.html
+++ b/_imports/article-topper-feature-black.html
@@ -10,7 +10,7 @@
 
 <sergey-import src="article-topper-context-related" />
 
-<sergey-import src="article-topper-headline">
+<sergey-import src="article-topper-headline-small">
     <strong class="font-black">The Dish:</strong> We tried the food from Oriole Park at Camden Yards. Again.
 </sergey-import>
 
